# roi-eval

./: CMakeLists.txt  README.md  cmake.sh
config/: .config.txt.swp  config.txt
include/: .config.h.swp  .psRoiAlign.h.swp  .roiAlign.h.swp  config.h  proposal.h  psRoiAlign.h  psRoiPool.h  roiAlign.h  roiPool.h
src/: .config.cc.swp  .psRoiAlign.cc.swp  .psRoiPool.cc.swp  .roiAlign.cc.swp  .roiPool.cc.swp  CMakeLists.txt  config.cc  proposal.cc  psRoiAlign.cc  psRoiPool.cc  roiAlign.cc  roiPool.cc
test/: .roi_align_main.cc.swp  .roi_pool_main.cc.swp  CMakeLists.txt  psroi_align_main.cc  psroi_pool_main.cc  roi_align_main.cc  roi_pool_main.cc
