SET(ROI_LIB "roi")

# lib files directories
INCLUDE_DIRECTORIES(${ROI_INC_PATH})
INCLUDE_DIRECTORIES(.)

# build all targets
AUX_SOURCE_DIRECTORY(. LIB_ROI_SRC_LIST)

# mesages to display
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")

# build library
SET(LIBRARY_OUTPUT_PATH ${LIB_PATH})
MESSAGE(STATUS "LIBRARY_OUTPUT_PATH: ${LIBRARY_OUTPUT_PATH}")
ADD_LIBRARY(${ROI_LIB} ${LIB_ROI_SRC_LIST})

