SET(ROI_POOL_DEMO "roi_pool_demo")
SET(PSROI_POOL_DEMO "psroi_pool_demo")
SET(ROI_ALIGN_DEMO "roi_align_demo")
SET(PSROI_ALIGN_DEMO "psroi_align_demo")

INCLUDE_DIRECTORIES(${ROI_INC_PATH})
INCLUDE_DIRECTORIES(.)

SET(ROI_POOL_TEST_SRC_LIST roi_pool_main.cc)
SET(PSROI_POOL_TEST_SRC_LIST psroi_pool_main.cc)
SET(ROI_ALIGN_TEST_SRC_LIST roi_align_main.cc)
SET(PSROI_ALIGN_TEST_SRC_LIST psroi_align_main.cc)

MESSAGE(STATUS "ROI_POOL_TEST_SRC_LIST: ${ROI_POOL_TEST_SRC_LIST}")
MESSAGE(STATUS "PSROI_POOL_TEST_SRC_LIST: ${PSROI_POOL_TEST_SRC_LIST}")
MESSAGE(STATUS "ROI_ALIGN_TEST_SRC_LIST: ${ROI_ALIGN_TEST_SRC_LIST}")
MESSAGE(STATUS "PSROI_ALIGN_TEST_SRC_LIST: ${PSROI_ALIGN_TEST_SRC_LIST}")

SET(EXECUTABLE_OUTPUT_PATH ${DEMO_PATH})

ADD_EXECUTABLE(${ROI_POOL_DEMO} ${ROI_POOL_TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${ROI_POOL_DEMO} roi)

ADD_EXECUTABLE(${PSROI_POOL_DEMO} ${PSROI_POOL_TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${PSROI_POOL_DEMO} roi)

ADD_EXECUTABLE(${ROI_ALIGN_DEMO} ${ROI_ALIGN_TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${ROI_ALIGN_DEMO} roi)

ADD_EXECUTABLE(${PSROI_ALIGN_DEMO} ${PSROI_ALIGN_TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${PSROI_ALIGN_DEMO} roi)
